# web-rust-vs-python

./: .gitignore  README.adoc
scripts/: run-py  run-rust
scripts/container/: create-container-db.sh  psql_history
scripts/sql/: create.sql  drop.sql  seed.sql
scripts/stress/: get-authors.js  get-books.js  post-book.js  post-book.lua
web-emmett/: .gitignore  Makefile  README.md  pyproject.toml
web-emmett/requirements/: dev.txt
web-emmett/tests/: test_web-emmett.py
web-emmett/webapp/: __init__.py  views.py
web-python/: .gitignore  Makefile  alembic.ini  pyproject.toml
web-python/config/: config.toml
web-python/migrations/versions/: ec5ddda825ce_create_schema.py
web-python/requirements/: devel.txt  prod.txt
web-python/scripts/: run
web-python/tests/: test_webapp.py
web-python/webapp/: __init__.py  app.py  db.py  json.py  logging.py  queries.py  settings.py  views.py
web-rust/: .env  Cargo.toml
web-rust/src/: main.rs  services.rs
