[build-system]
requires = [ "setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.black]
line-length = 88
skip-string-normalization = 1

[tool.pytest.ini_options]
# https://docs.pytest.org/en/latest/reference/customize.html
minversion = "6.0"
addopts = "--doctest-modules -vv --cov=web-emmett --capture=no --log-cli-level=DEBUG tests"
testpaths = [
    "tests",
]
