[package]
name = "web-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
dotenv = "0.15.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "postgres", "chrono"] }
chrono = { version = "0.4.23", features = ["serde"] }